--- a/api-mercadolibre/src/main/resources/application.properties
+++ b/api-mercadolibre/src/main/resources/application.properties
@@ -1,13 +1,29 @@
+spring.profiles=default
+
 itemUrl = https://api.mercadolibre.com/items/$ITEMID
 childrenUrl = https://api.mercadolibre.com/items/$ITEMID/children
 kafkaHost = localhost:9092
 topic= log_topic
 
 
-debug=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres 
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+
+#itemUrl = ${URL_ITEM}
+#childrenUrl = ${URL_CHILDREN}
+#kafkaHost = ${KAKFA_HOST}
+#topic= {TOPIC}
+
+
+#debug=false
+#spring.datasource.url=${URL_POSTGRES} 
+#spring.datasource.username==${USER_POSTGRES} 
+#spring.datasource.password==${PASS_POSTGRES} 
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.show-sql=true
+
+
 
