Ajustes dockerfile y base de datos en AWS

--- a/api-mercadolibre/src/main/resources/application.properties
+++ b/api-mercadolibre/src/main/resources/application.properties
@@ -4,9 +4,11 @@ itemUrl = https://api.mercadolibre.com/items/$ITEMID
 childrenUrl = https://api.mercadolibre.com/items/$ITEMID/children
 kafkaHost = localhost:9092
 topic= log_topic
+kafka = N
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres 
+spring.datasource.url=jdbc:postgresql://postgres.c9vc2lcfn2qx.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
